<resources>
    <string name="app_name">ECommerceApp</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAny Day</string>
    <string name="quality">It\'s now very easy to reach the\nbest quality among the\nproducts on the internet</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="do_you_have_an_account_log_in">Do you have an account? Log in</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="start">Start</string>
    <string name="reset_password">Reset password</string>
    <string name="we_will_send_you_the_password_reset_link_to_your_email">We will send you the password reset link to your email</string>
    <string name="cancel">cancel</string>
    <string name="send">send</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="g_search_now">search now</string>
    <string name="best_products">Best Products</string>
    <string name="best_deals">Best Deals</string>
    <string name="your_shopping_cart_is_empty">Your Shopping Cart is Empty!</string>
    <string name="checkout">Checkout</string>
    <string name="_190">190$</string>
    <string name="total">Total</string>
    <string name="my_cart">My cart</string>
    <string name="see_product">See product</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="full_name">Full Name</string>
    <string name="address_location_ex_home">Address location Ex: Home</string>
    <string name="addresses">Addresses</string>
    <string name="billing">Billing</string>
    <string name="place_order">Place Order</string>
    <string name="_150">$150</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="app_dose_not_support_virtual_payments_you_can_pay_when_you_receive_your_order">App dose not support virtual payments. You can pay when you receive your order.</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="chair">Chair</string>
    <string name="_50">$50</string>
    <string name="l">L</string>
    <string name="_1">1</string>
    <string name="my_account">My account</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="edit_personal_details">edit personal details</string>
    <string name="orders">Orders</string>
    <string name="all_orders">All orders</string>
    <string name="track_orders">Track Orders</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Regional</string>
    <string name="logout">Logout</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="made_from_plastic">made from plastic</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="_1234567">#1234567</string>
    <string name="address">Address</string>
    <string name="products">Products</string>
</resources>