<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSendPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/we_will_send_you_the_password_reset_link_to_your_email"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResetPassword" />

    <EditText
        android:id="@+id/etEnterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:autofillHints="emailAddress"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tvSendPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/white_background"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/btnSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEnterEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/blue_background"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@id/etEnterEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>