<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardProductImages"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="13dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerProductImages"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_close"
                app:tint="@color/g_black"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvProductDetailsName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardProductImages"
            tools:text="Blouse" />

        <TextView
            android:id="@+id/tvProductDetailsPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="@color/g_gray700"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@id/tvProductDetailsName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardProductImages"
            app:layout_constraintTop_toTopOf="@id/tvProductDetailsName"
            tools:text="500$" />

        <TextView
            android:id="@+id/tvProductDetailsDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/made_from_plastic"
            android:textColor="@color/g_gray700"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProductDetailsName" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/g_line"
            app:layout_constraintTop_toBottomOf="@id/tvProductDetailsDesc" />

        <TextView
            android:id="@+id/tvProductDetailsColor"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/color"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvColors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tvProductDetailsColor"
            app:layout_constraintTop_toBottomOf="@id/tvProductDetailsColor" />

        <TextView
            android:id="@+id/tvProductDetailsSize"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/size"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/tvProductDetailsColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintTop_toTopOf="@id/tvProductDetailsColor" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_sizes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/rvColors"
            app:layout_constraintEnd_toEndOf="@id/tvProductDetailsSize"
            app:layout_constraintTop_toBottomOf="@id/tvProductDetailsSize"
            app:layout_constraintTop_toTopOf="@id/rvColors" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnAddToCart"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/add_to_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvColors"
            app:spinning_bar_color="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>

