<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarCart"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/ivCloseCart"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_baseline_close"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/black"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/my_cart"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@id/ivCloseCart"
                    app:layout_constraintStart_toStartOf="@id/ivCloseCart"
                    app:layout_constraintTop_toTopOf="@id/ivCloseCart" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomGuideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.68" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toTopOf="@id/bottomGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@id/progressBarCart"
            tools:listitem="@layout/cart_product_item" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBarCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarCart" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/totalBoxContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/total_box_background"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@id/bottomGuideline">

            <TextView
                android:id="@+id/tvCartTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCartTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/_190"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/tvCartTotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvCartTotal" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnCheckout"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_margin="15dp"

            android:text="@string/checkout"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@id/totalBoxContainer"
            app:spinning_bar_color="@color/white" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emptyLayoutCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ivEmptyBoxTexture"
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:src="@drawable/ic_empty_box_texture"
                app:layout_constraintBottom_toBottomOf="@id/ivEmptyBox"
                app:layout_constraintEnd_toEndOf="@id/ivEmptyBox"
                app:layout_constraintStart_toStartOf="@id/ivEmptyBox"
                app:layout_constraintTop_toTopOf="@id/ivEmptyBox"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/ivEmptyBox"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/empty_box_background"
                android:src="@drawable/ic_empty_box"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="@string/your_shopping_cart_is_empty"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@id/ivEmptyBoxTexture"
                app:layout_constraintStart_toStartOf="@id/ivEmptyBoxTexture"
                app:layout_constraintTop_toBottomOf="@id/ivEmptyBoxTexture" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>